test/sema/invalid-arguments-to-function-pointer.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(void(int, int) a) {
    // CHECK: [[@LINE+1]]:11: error: invalid argument #2 type 'bool' to 'a', expected 'int'
    a(42, false);
}
